src/styles.scss
:root {
  --primary-font: 'Inter', sans-serif
  --secondary-font: 'Lexend Deca', sans-serif
  --white: hsl(0deg 0% 100%)
  --transparent-white-paragraph: hsla(0deg 0% 100% 75%)
  --transparent-white-headings: hsla(0deg 0% 100% 75%)
  --very-dark-blue: hsl(233deg 47% 7%)
  --dark-desaturated-blue: hsl(244deg 38% 16%)
  --soft-violet: hsl(277deg 64% 61%)
  --mobile-bg-header: url('/src/images/image-header-mobile.jpg')
  --desktop-bg-header: url('/src/images/image-header-desktop.jpg')
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  min-width: 320px;
  background-color: var(--very-dark-blue);
}

.card {
  display: flex;
  flex-direction: column;
  background-color: var(--dark-desaturated-blue);
  border-bottom-left-radius: 12px;
  border-bottom-right-radius: 12px;
  font-family: var(--primary-font);
  font-weight: 400;
  color: var(--white);
  max-width: 20.4375rem;
  width: 100%;

  @media screen and (width >= 1024px) {
    flex-direction: row-reverse;
    max-width: 64rem;
    border-top-left-radius: 12px;
    border-bottom-right-radius: 0;
  }

  .card__header {
    background-image: var(--mobile-bg-header);
    background-color: var(--soft-violet);
    background-blend-mode: multiply;
    background-repeat: no-repeat;
    background-size: contain;
    height: 240px;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    opacity: 0.8;
  }

    @media screen and (width >= 1024px) {
      background-image: var(--desktop-bg-header);
      height: 423px;
      width: 32rem;
      border-top-left-radius: 0;
      border-bottom-right-radius: 12px;
    }

  .card__content {
    padding: 15px 33px;
    width: 100%;
    text-align: center;

    @media screen and (width >= 1024px) {
      padding: 25px;
      width: 32rem;
      text-align: left;
    }

    .card__heading {
      font-size: 1.75rem;
      font-weight: 700;

      @media screen and (width >= 1024px) {
        font-size: 2rem;
      }
    }

    .card__highlight {
      color: var(--soft-violet);
    }

    .card__description {
      font-size: 0.9rem;
      line-height: 1.5em;
      color: var(--transparent-white-paragraph);
    }

    .card__stats {
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      list-style-type: none;
      padding: 0;
      margin: 0;

      @media screen and (width >= 1024px) {
        flex-direction: row;
      }
      
      .stats__figure {
        font-weight: 700;
        font-size: 1.5rem;
      }
          
      .stats__heading {
        font-family: var(--secondary-font);
        font-weight: 400;
        color: var(--transparent-white-headings);
        text-transform: uppercase;
        font-size: 0.75rem;
        margin-top: -15px;
      }
    }
  }
}

